<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_general">

        <ListPreference
            app:defaultValue="system"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language_key"
            app:title="@string/settings_language_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="system"
            app:entries="@array/dark_mode_entries"
            app:entryValues="@array/dark_mode_values"
            app:key="dark_mode_key"
            app:title="@string/settings_dark_mode_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>