<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ShoppingListActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/shopping_list_title"
        app:theme="@style/AppTheme.Toolbar" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/empty_shopping_list_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="empty_shopping_list_image,empty_shopping_list_message"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/empty_shopping_list_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_production_quantity_limits_24"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/empty_shopping_list_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.4"
        app:tint="@android:color/darker_gray" />

    <TextView
        android:id="@+id/empty_shopping_list_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/empty_list_message"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empty_shopping_list_image" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shopping_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="80dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/total_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:navigationIconTint="?attr/colorOnPrimary"
        tools:listitem="@layout/item_shopping" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/total_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/total_label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopping_total_label"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/total_amount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="R$ 150,75" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_shopping_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@string/shopping_form_title"
        app:layout_constraintBottom_toTopOf="@+id/total_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_shopping_cart_24" />

</androidx.constraintlayout.widget.ConstraintLayout>